Flush control socket when we first establish a connection with an ftp server (large welcome messages can be ignored safely). b=145776; r=ssu; sr=dveditz